--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Amit Paliwal</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#contact">Hire me</a>
+                <a href="#contact">Contact me</a>
             </div>
         </div>
     </section>
@@ -155,7 +155,7 @@
         </div>
     </section>
 
-
+<!--
     <!-- contact section start -->
     <section class="contact" id="contact">
         <div class="max-width">
@@ -220,6 +220,7 @@
             </div>
         </div>
     </section>
+    -->
 
     <!-- footer section start -->
     <footer>
