--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         I did B.SC. in Computer Science from D.S.B. Campus Kumaun University.
                         I like to travel.
                         I believe travelling gives you a new perspective to everything. You get to know a lot about the different cultures, the cuisines, their history, the language and all the small unique things every place has to offer</p>
-                    <a href="/images/Resume(1).pdf" target="_blank">Download CV</a>
+                    <a href="https://drive.google.com/file/d/1vkTDhJxGkjjpCKtObjagpREbKWxLHH9_/view?usp=sharing" target="_blank">Download CV</a>
                 </div>
             </div>
         </div>
