--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h2 class="title">My skills</h2>
             <div class="skills-content">
                 <div class="column left">
-                    <div class="text" style="font-size: 2.5rem;">With the great jeal and joy, dezine more than<br>50+ website with high scale of dezing...</div>
+                    <div class="text" style="font-size: 2.5rem;">Learn, Apply & Give Best...</div>
                     <p>
                         
                     </p>
