--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
     <!-- footer section start -->
     <footer>
         <span>Created By Amit Paliwal | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+        <span>❤️ With <> </span>
     </footer>
 
     <script src="script.js"></script>
