--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <footer>
         <span>Created By Amit Paliwal | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
         <br/>
-        <span>❤️ With <> </span>
+        <span>❤️ With </> </span>
     </footer>
 
     <script src="script.js"></script>
