--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
             <h2 class="title">My skills</h2>
             <div class="skills-content">
                 <div class="column left">
-                    <div class="text" style="font-size: 2.5rem;">Learn, Apply & Give Best...</div>
+                    <div class="text" style="font-size: 2.5rem;">Learn, Apply & Give Best...</div><br/>
                     <p>
-                        
+                        Soon I'll update the contact section, Now Please use <b>amitpaliwal@gmail.com</b>
                     </p>
                     
                 </div>
