--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text" style="font-size: 2.5rem;">Learn, Apply & Give Best...</div><br/>
-                    <p>
+                    <div>
+                    <p style="color:white ;display:flex;justify-content: center;align-items:center;">
                         Soon I'll update the contact section, Now Please use <b>amitpaliwal@gmail.com</b>
                     </p>
+                    </div>
                     
                 </div>
                 <div class="column right">
