--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text" style="font-size: 2.5rem;">Learn, Apply & Give Best...</div><br/>
-                    <div>
-                    <p style="color:white ;display:flex;justify-content: center;align-items:center;">
-                        Please use <b> amitpaliwal@gmail.com </b> for Contact.
+                    
+                    <div style="color:white ;display:flex;justify-content: center;align-items:center;">
+                    <p >
+                        Please use - <b> amitpaliwal@gmail.com </b> - for Contact.
                     </p>
                     </div>
                     
